--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
   <!-- <script src="vue.js" ></script> -->
   <title>Document</title>
 </head>
-<body>
+<body style="background-color:white">
 <div id="app">
 
 </div>
